# 003-streamlit-split-and-summarize-v1

./: pyproject.toml
